--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Descomplica</title>
+    <style>
+      img {
+        width: 50%;
+        margin: auto;
+        display: block;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <img src="./images/logo.png" alt="Logotipo da Descomplica" />
+  </body>
 </html>
